--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.19",
     "moment": "^2.26.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
