fixed vulnerability node-forge

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "elliptic": "^6.5.3",
     "lodash": "^4.17.19",
     "moment": "^2.26.0",
+    "node-forge": "^0.10.0",
     "serialize-javascript": "^4.0.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
